Refactor to true LangChain4j AiServices agent pattern
Replace manual step-by-step orchestration with a proper AI agent where
the LLM autonomously decides which tools to call and in what order.

- Add BookingAgent interface (AiServices + @SystemMessage + @MemoryId)
- Wire BookingAgent in LlmConfig with all tools and per-session ChatMemory
- Add PolicyTool wrapping PolicyRetriever so the LLM can call it as a tool
- Move idempotency logic from BookingService into BookingTool directly
- Simplify AgentOrchestrator to: parse state → enrich message → delegate to BookingAgent → map status
- Delete AvailabilityService, BookingService, EmailService, PricingService, ServiceMessageFormatter wrappers
- Add CLAUDE.md with build commands and architecture overview